logs/Slang/generated/hdlconv/hdlconvertor_p176.sv.log
name: hdlconvertor_p176
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p176.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p176.sv:1:1: error: language feature not yet supported
class E #(type T = int) extends C;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p176.sv:3:9: error: expected identifier
function new(T x_init);
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p176.sv:3:10: error: expected statement
function new(T x_init);
         ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p176.sv:3:22: error: expected declarator
function new(T x_init);
                     ^
